@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1994, 1995, 1996 Free Software Foundation, Inc.
+## Copyright (C) 1994, 1995, 1996, 1997 Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -28,12 +28,16 @@
 	@rm -f _$*.c
 	@ln $< _$*.c && $(LIBTOOL) --mode=compile $(COMPILE) -c _$*.c && mv _$*.lo $@ && rm _$*.c
 
+## This rule exists because some versions of make won't apply
+## transitivity through implicit rules.
 .c._o:
 	$(ANSI2KNR) $< > $*.tmp && mv $*.tmp $*._c
 	@echo "$(COMPILE) -c $*._c"
 	@rm -f _$*.c
 	@ln $*._c _$*.c && $(COMPILE) -c _$*.c && mv _$*.o $@ && rm _$*.c
 
+## This rule exists because some versions of make won't apply
+## transitivity through implicit rules.
 .c.l_o:
 	$(ANSI2KNR) $< > $*.tmp && mv $*.tmp $*._c
 	@echo "$(LIBTOOL) --mode=compile $(COMPILE) -c $*._c"
